@@ -14,6 +14,9 @@ Changes
 Fixes
 -----
 
+ - Fixed an issue that caused extra spaces to be added 
+   to the formatted console results.
+
 2017/10/19 1.4.5
 ================
 
